Se agrego la logica los microservicios, ademas de que se separaron logicas del app para hacerlo mas limpio

--- a/src/styles/rondas.css
+++ b/src/styles/rondas.css
@@ -6,10 +6,12 @@
 }
 
 .rondas-panel h2 {
-  margin-bottom: 15px;
+  margin-bottom: 65px;
   font-size: 24px;
   color: #00c0ff;
   letter-spacing: 1px;
+  margin-left: 140px;
+  margin-top: 100px;
 }
 
 /* Tabla completa */
