Se modifico logica para que aceptara dos cargas en una casiila en las rondas de vinilica, ademas que tambien se corrigio la logica de cambiar el operario y saliera en el subrayado, tambien se optimizo el app para que saliera mas limpio

--- a/src/styles/modalCargas.css
+++ b/src/styles/modalCargas.css
@@ -419,3 +419,15 @@
 .marca-card.activa h3 {
   color: #fff;
 }
+
+
+
+
+.fila-carga.clickable-row {
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+
+.fila-carga.clickable-row:hover {
+    background-color: rgba(0, 123, 255, 0.1); /* Un azul muy suave */
+}
